--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "ng build --prod",
+    "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
+  },
+  "engines": {
+    "node": "16.9.1",
+    "npm": "7.21.1"
   },
   "private": true,
   "dependencies": {
@@ -24,8 +30,10 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.3.0",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
