--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "postinstall": "ng build --prod",
-    "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript"
-  },
-  "engines": {
-    "node": "16.9.1",
-    "npm": "7.21.1"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
