--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.6.0",
     "ngx-toastr": "^14.3.0",
     "path": "^0.12.7",
+    "pdfmake": "^0.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
